Issue 117:	Reduce dom generation of iframe. Use IS_Portal.behindIframe for displaying tab menu or widget menu.
Update issue 117
Use IS_Portal.behindIframe for displaying tab menu or widget menu.

git-svn-id: https://infoscoop.googlecode.com/svn/trunk@163 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/tab.css
+++ b/src/main/web/skin/tab.css
@@ -277,11 +277,3 @@ html:not([lang*=""]) .infoScoop #tabs > #tabsUl > .addatab {
 .infoScoop .tabMenu .resetColumnWidth {
 	background: url(./imgs/changeColumn2.gif ) no-repeat center left;
 }
-.infoScoop .tabMenuOverlay,
-.infoScoop .widgetMenuOverlay {
-	position:absolute;
-	z-index:40;
-	-moz-opacity:0;
-	opacity:0;
-	filter:alpha(opacity=0);
-}
